# django-basics

./: .gitignore  README.rst  db.sqlite3  manage.py  pyproject.toml
application/: asgi.py  manage.py  settings.py  wsgi.py
application/website/: settings.py  wsgi.py
mysite/: db.sqlite3
mysite/mysite/: settings.py
src/django_basic/: __main__.py
src/django_basic/mysite/: urls.py
src/django_basic/website/: asgi.py  settings.py  urls.py  wsgi.py
