[tool.poetry]
name = "django-basic"
version = "0.1.1"
description = ""
authors = ["LEv145"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
django-polls = {git = "https://github.com/LEv145/django-polls"}
django-stubs = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
