[tool.poetry]
name = "django-basic"
version = "0.1.4"
description = "Базовое приложение на django, созданное из туториулов"
authors = ["LEv145"]
readme = "README.rst"
license = "GPL-3.0-only"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
include = [
    "LICENSE",
    "README.rst",
    "src/django_basic/static/**/*",
    "src/django_basic/templates/**/*",
    "docs/*",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
django-polls = {git = "https://github.com/LEv145/django-polls"}
django-stubs = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
